tests/fixtures/invalid/pow_float_bytes_float.py
# Cannot call pow() with Float, Bytes, Float
x = pow(1.0, b"hello", 1.0)
